Configurada todos os spots

--- a/MotionLocationApp/Base.lproj/Main.storyboard
+++ b/MotionLocationApp/Base.lproj/Main.storyboard
@@ -28,32 +28,17 @@
                                     <constraint firstAttribute="height" constant="500" id="JqE-Yr-6OI"/>
                                 </constraints>
                             </mapView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7t-Ww-02C">
-                                <rect key="frame" x="16" y="528" width="343" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C81-VQ-SQD">
-                                <rect key="frame" x="16" y="557" width="343" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T9q-8d-cqu">
-                                <rect key="frame" x="16" y="586" width="343" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDz-Z7-Omg">
-                                <rect key="frame" x="16" y="615" width="343" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Olá!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NyQ-fv-aho">
+                                <rect key="frame" x="16" y="530" width="343" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="63h-po-qly"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSO-Id-UmV">
-                                <rect key="frame" x="16" y="644" width="343" height="21"/>
+                                <rect key="frame" x="16" y="590" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -62,32 +47,20 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="F18-x0-l85" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Ctu-gw-Nkt"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="qDz-Z7-Omg" secondAttribute="trailing" id="Gor-Gy-mz0"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="T9q-8d-cqu" secondAttribute="trailing" id="Hfc-DP-ZKn"/>
-                            <constraint firstItem="T9q-8d-cqu" firstAttribute="top" secondItem="C81-VQ-SQD" secondAttribute="bottom" constant="8" id="KbF-eo-Xt9"/>
-                            <constraint firstItem="T9q-8d-cqu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="LBy-uY-fKQ"/>
-                            <constraint firstItem="PSO-Id-UmV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="N5S-En-JTY"/>
-                            <constraint firstItem="qDz-Z7-Omg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="T7j-4X-3if"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="C81-VQ-SQD" secondAttribute="trailing" id="UHw-py-ubx"/>
+                            <constraint firstItem="NyQ-fv-aho" firstAttribute="top" secondItem="F18-x0-l85" secondAttribute="bottom" constant="10" id="Epi-ui-Sor"/>
+                            <constraint firstItem="PSO-Id-UmV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="I5a-tj-m50"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NyQ-fv-aho" secondAttribute="trailing" id="Scj-2J-FRw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="F18-x0-l85" secondAttribute="trailing" constant="-16" id="blw-HH-yGq"/>
-                            <constraint firstItem="Z7t-Ww-02C" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ewU-Fv-ggg"/>
-                            <constraint firstItem="PSO-Id-UmV" firstAttribute="top" secondItem="qDz-Z7-Omg" secondAttribute="bottom" constant="8" id="gFt-gD-zZp"/>
-                            <constraint firstItem="C81-VQ-SQD" firstAttribute="top" secondItem="Z7t-Ww-02C" secondAttribute="bottom" constant="8" id="hMh-Qb-yrI"/>
+                            <constraint firstItem="PSO-Id-UmV" firstAttribute="top" secondItem="NyQ-fv-aho" secondAttribute="bottom" constant="20" id="cGi-fv-02S"/>
+                            <constraint firstItem="PSO-Id-UmV" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="gxK-hO-Tec"/>
                             <constraint firstItem="F18-x0-l85" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="hYh-ym-2fS"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="PSO-Id-UmV" secondAttribute="trailing" id="k3c-ot-RlC"/>
-                            <constraint firstItem="C81-VQ-SQD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="n1J-Zj-Lqa"/>
-                            <constraint firstItem="Z7t-Ww-02C" firstAttribute="top" secondItem="F18-x0-l85" secondAttribute="bottom" constant="8" id="rxs-wd-3pX"/>
+                            <constraint firstItem="NyQ-fv-aho" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="vH0-W6-r9F"/>
                             <constraint firstItem="F18-x0-l85" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wIH-Jh-fgA"/>
-                            <constraint firstItem="Z7t-Ww-02C" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="y0N-TT-m2j"/>
-                            <constraint firstItem="qDz-Z7-Omg" firstAttribute="top" secondItem="T9q-8d-cqu" secondAttribute="bottom" constant="8" id="yi0-uP-SSo"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="latitude" destination="Z7t-Ww-02C" id="oWR-PM-2e1"/>
-                        <outlet property="longitude" destination="C81-VQ-SQD" id="8zz-9u-I3A"/>
+                        <outlet property="indicador" destination="NyQ-fv-aho" id="2wt-bO-lK1"/>
                         <outlet property="mapView" destination="F18-x0-l85" id="YEq-zP-olf"/>
-                        <outlet property="pitch" destination="qDz-Z7-Omg" id="Icb-h6-Qfc"/>
-                        <outlet property="roll" destination="T9q-8d-cqu" id="RyG-7h-Ogg"/>
                         <outlet property="yaw" destination="PSO-Id-UmV" id="kPU-6K-1s3"/>
                     </connections>
                 </viewController>
